[package]
name = "oiio"
version = "0.1.0"
authors = ["Anders Langlands <anderslanglands@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oiio-sys = {path="../build/oiio-sys"}
thiserror = "1.0.26"
half = "1.7.1"
