[package]
name = "oiio-sys"
version = "0.2.0-beta0"
edition = "2021"
description = "Rust sys bindings for OpenImageIO https://github.com/AcademySoftwareFoundation/OpenImageIO"
documentation = "https://docs.rs/oiio-sys"
authors = [
    "Scott Wilson <scott@propersquid.com>",
    "David Aguilar <davvid@gmail.com>",
]
license = "Apache-2.0"
keywords = ["graphics", "images", "render", "texture", "vfx"]
categories = ["graphics", "multimedia::images", "rendering::data-formats"]
readme = "README.md"
homepage = "https://github.com/vfx-rs/oiio-bind"
repository = "https://github.com/vfx-rs/oiio-bind.git"
links = "OpenImageIO"

[dependencies]
cxx = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cxx-build = "1.0.117"
pkg-config = "0.3.30"

# The docs are the same across all platforms so we only need to build once.
[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
rustc-args = ["--cfg", "docsrs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
